<resources>
    <string name="app_name">Kanban</string>
    <string name="app_subtitle">simple Kanban tool</string>
    <string name="label_todo">ToDo</string>
    <string name="label_in_progress">In progress</string>
    <string name="label_done">Done</string>
    <string name="label_list_empty">This list is empty!</string>

    <string name="action_item">Item</string>
    <string name="action_settings">Settings…</string>
    <string name="action_about">About…</string>
    <string name="nmrd_text">
        <b>N</b>ational\n
        <b>O</b>perations\n
        <b>M</b>anagement\n
        <b>S</b>ystems\n
        <b>D</b>ivision
    </string>
    <string name="copyright_text">
        <b>Copyright 2027 <i>Laszlo TAMAS9</i></b>\n
        Kanban application
    </string>
</resources>