<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add" />

    <LinearLayout
        android:id="@+id/layoutTodo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/colo_todo_bgr"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_todo_title"
            android:minWidth="100dp"
            android:padding="5dp"
            android:text="@string/label_todo"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#cccccc"
        app:layout_constraintStart_toEndOf="@id/layoutTodo"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutInProgress"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/color_in_progress_bgr"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/view1"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewInProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_in_progress_title"
            android:minWidth="100dp"
            android:padding="5dp"
            android:paddingStart="5dp"
            android:text="@string/label_in_progress"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewInProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#cccccc"
        app:layout_constraintStart_toEndOf="@id/layoutInProgress"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutDone"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/color_done_bgr"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_done_title"
            android:minWidth="100dp"
            android:padding="5dp"
            android:paddingStart="5dp"
            android:text="@string/label_done"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>